remove code from previous version of htf logic and adapt for newer version